-fix: fixed taskbar
-fix: bug in login page, where size didn't fit

-fix: buttons in voter page were ugly

--- a/frontend/src/app/admin-election-list/admin-election-list.component.css
+++ b/frontend/src/app/admin-election-list/admin-election-list.component.css
@@ -94,7 +94,6 @@ body {
   height: 70px;
   bottom: 30px;
   right: 30px;
-  z-index: 50px;
 }
 #container-floating:hover {
   height: 400px;
