--- a/frontend/src/app/vote/vote.component.css
+++ b/frontend/src/app/vote/vote.component.css
@@ -86,6 +86,7 @@
 
 .headliner-container {
   margin-left: 20vw;
+  padding-bottom: 2%;
 }
 
 .headliner-container h2 {
